--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,5 +7,5 @@
     <item
         android:id="@+id/action_map"
         android:title="Map"
-        android:enabled="true"/>
+        android:enabled="false"/>
 </menu>
