--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -19,6 +19,7 @@
             android:layout_height="match_parent"
             app:mapbox_styleUrl="mapbox://styles/mapbox/outdoors-v10"
             app:mapbox_uiRotateGestures="false"
+            app:mapbox_uiTiltGestures="false"
             app:mapbox_uiZoomControls="true"
             app:mapbox_myLocation="true"/>
 
