--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
         android:layout_marginBottom="0dp"
         android:text="If you don't select OsmAnd folder the app will create only tiles for internal map viewer."/>
@@ -18,28 +18,28 @@
         style="@style/vv_button"
         android:id="@+id/osmandBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="Select OsmAnd folder"/>
 
     <com.dd.processbutton.iml.ActionProcessButton
         style="@style/vv_button"
         android:id="@+id/updateBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="Update Vw data"/>
 
     <com.dd.processbutton.iml.ActionProcessButton
         style="@style/vv_button"
         android:id="@+id/recreateBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="Recreate tiles and rides"/>
 
     <com.dd.processbutton.iml.ActionProcessButton
         style="@style/vv_button"
         android:id="@+id/mapBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="View on map (BETA)"/>
 
     <ProgressBar
@@ -50,6 +50,6 @@
 
     <WebView
         android:id="@+id/webView"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_width="match_parent"/>
 </LinearLayout>
