--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -26,14 +26,49 @@
                 app:mapbox_uiTiltGestures="false"
                 app:mapbox_uiZoomControls="true" />
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/myLocationButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <com.github.clans.fab.FloatingActionMenu
+                style="@style/vv_action_button"
+                android:id="@+id/menu"
                 android:layout_margin="16dp"
-                android:src="@drawable/ic_my_location"
                 app:layout_anchor="@id/mapView"
-                app:layout_anchorGravity="bottom|right|end" />
+                app:layout_anchorGravity="bottom|left|start"
+                app:layout_behavior="ru.anisart.vv.FloatingActionMenuBehavior"
+                app:menu_fab_size="normal"
+                app:menu_labels_position="right">
+
+                <com.github.clans.fab.FloatingActionButton
+                    android:id="@+id/explorerButton"
+                    style="@style/vv_action_button"
+                    android:src="@drawable/ic_explorer"
+                    app:fab_label="Explorer"/>
+
+                <com.github.clans.fab.FloatingActionButton
+                    android:id="@+id/ridesButton"
+                    style="@style/vv_action_button"
+                    android:src="@drawable/ic_rides"
+                    app:fab_label="Rides"/>
+
+                <com.github.clans.fab.FloatingActionButton
+                    android:id="@+id/gridButton"
+                    style="@style/vv_action_button"
+                    android:src="@drawable/ic_grid"
+                    app:fab_label="Grid"/>
+
+                <com.github.clans.fab.FloatingActionButton
+                    android:id="@+id/styleButton"
+                    style="@style/vv_action_button"
+                    android:src="@drawable/ic_colors"
+                    app:fab_label="Style"/>
+
+            </com.github.clans.fab.FloatingActionMenu>
+
+            <android.support.design.widget.FloatingActionButton
+                style="@style/vv_action_button"
+                android:id="@+id/myLocationButton"
+                android:src="@drawable/ic_my_location"
+                android:layout_margin="16dp"
+                app:layout_anchor="@id/mapView"
+                app:layout_anchorGravity="bottom|right|end"/>
 
             <TextView
                 android:id="@+id/debug"
@@ -44,36 +79,36 @@
 
         </android.support.design.widget.CoordinatorLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal">-->
 
-            <ToggleButton
-                android:id="@+id/explorerButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:textOff="@string/btn_label_explorer"
-                android:textOn="@string/btn_label_explorer" />
+            <!--<ToggleButton-->
+                <!--android:id="@+id/explorerButton"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:checked="false"-->
+                <!--android:textOff="@string/btn_label_explorer"-->
+                <!--android:textOn="@string/btn_label_explorer" />-->
 
-            <ToggleButton
-                android:id="@+id/ridesButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:textOff="@string/btn_label_rides"
-                android:textOn="@string/btn_label_rides" />
+            <!--<ToggleButton-->
+                <!--android:id="@+id/ridesButton"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:checked="false"-->
+                <!--android:textOff="@string/btn_label_rides"-->
+                <!--android:textOn="@string/btn_label_rides" />-->
 
-            <ToggleButton
-                android:id="@+id/gridButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:textOff="@string/btn_label_grid"
-                android:textOn="@string/btn_label_grid" />
+            <!--<ToggleButton-->
+                <!--android:id="@+id/gridButton"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:checked="false"-->
+                <!--android:textOff="@string/btn_label_grid"-->
+                <!--android:textOn="@string/btn_label_grid" />-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
     </LinearLayout>
 
