--- a/app/src/main/res/xml/preference_map.xml
+++ b/app/src/main/res/xml/preference_map.xml
@@ -3,34 +3,73 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.jaredrummler.android.colorpicker.ColorPreference
-        android:defaultValue="0xFF3F51B5"
-        android:key="@string/key_color_explorer_fill"
-        android:title="Explorer tiles"
-        app:cpv_showAlphaSlider="true"/>
+    <PreferenceCategory
+        android:title="Colors">
 
-    <com.jaredrummler.android.colorpicker.ColorPreference
-        android:defaultValue="0xFF3F51B5"
-        android:key="@string/key_color_cluster_fill"
-        android:title="Cluster tiles"
-        app:cpv_showAlphaSlider="true"/>
+        <com.jaredrummler.android.colorpicker.ColorPreference
+            android:defaultValue="0x9000FF00"
+            android:key="@string/key_color_explorer"
+            android:title="Explorer tiles"
+            app:cpv_showAlphaSlider="true"/>
 
-    <com.jaredrummler.android.colorpicker.ColorPreference
-        android:defaultValue="0xFF3F51B5"
-        android:key="@string/key_color_grid"
-        android:title="Grid"
-        app:cpv_showAlphaSlider="true"/>
+        <com.jaredrummler.android.colorpicker.ColorPreference
+            android:defaultValue="0x900000FF"
+            android:key="@string/key_color_cluster"
+            android:title="Cluster tiles"
+            app:cpv_showAlphaSlider="true"/>
 
-    <com.jaredrummler.android.colorpicker.ColorPreference
-        android:defaultValue="0xFF3F51B5"
-        android:key="@string/key_color_rides"
-        android:title="Rides"
-        app:cpv_showAlphaSlider="true"/>
+        <com.jaredrummler.android.colorpicker.ColorPreference
+            android:defaultValue="0x90000000"
+            android:key="@string/key_color_grid"
+            android:title="Grid"
+            app:cpv_showAlphaSlider="true"/>
 
-    <ListPreference
-        android:key="@string/key_map_style"
-        android:title="Map style"
-        android:entries="@array/style_entries"
-        android:entryValues="@array/style_values"/>
+        <com.jaredrummler.android.colorpicker.ColorPreference
+            android:defaultValue="0x90FF0000"
+            android:key="@string/key_color_rides"
+            android:title="Rides"
+            app:cpv_showAlphaSlider="true"/>
+
+        <com.jaredrummler.android.colorpicker.ColorPreference
+            android:defaultValue="0xFF000000"
+            android:key="@string/key_color_recorded_track"
+            android:title="Recorded track"
+            app:cpv_showAlphaSlider="true"/>
+
+        <com.jaredrummler.android.colorpicker.ColorPreference
+            android:defaultValue="0x90000000"
+            android:key="@string/key_color_recorded_tiles"
+            android:title="Recorded tiles"
+            app:cpv_showAlphaSlider="true"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="Map">
+
+        <ListPreference
+            android:defaultValue="@string/mapbox_style_outdoors"
+            android:key="@string/key_map_style"
+            android:title="Map style"
+            android:entries="@array/map_style_entries"
+            android:entryValues="@array/map_style_values"/>
+
+        <ListPreference
+            android:defaultValue="@string/heatmap_type_default_value"
+            android:key="@string/key_heatmap_type"
+            android:title="Heatmap type"
+            android:entries="@array/heatmap_type_entries"
+            android:entryValues="@array/heatmap_type_values"/>
+
+        <ListPreference
+            android:defaultValue="@string/heatmap_style_default_value"
+            android:key="@string/key_heatmap_style"
+            android:title="Heatmap style"
+            android:entries="@array/heatmap_style_entries"
+            android:entryValues="@array/heatmap_style_values"/>
+
+    </PreferenceCategory>
+
+
 
 </PreferenceScreen>
