--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.design.widget.CoordinatorLayout
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
@@ -20,10 +20,8 @@
                 android:id="@+id/mapView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:mapbox_styleUrl="mapbox://styles/mapbox/outdoors-v10"
                 app:mapbox_uiRotateGestures="false"
-                app:mapbox_uiTiltGestures="false"
-                app:mapbox_uiZoomControls="false" />
+                app:mapbox_uiTiltGestures="false" />
 
             <com.github.clans.fab.FloatingActionMenu
                 style="@style/vv_action_button"
@@ -61,7 +59,7 @@
 
             </com.github.clans.fab.FloatingActionMenu>
 
-            <android.support.design.widget.FloatingActionButton
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 style="@style/vv_action_button"
                 android:id="@+id/myLocationButton"
                 android:src="@drawable/ic_my_location"
@@ -69,7 +67,7 @@
                 app:layout_anchor="@id/mapView"
                 app:layout_anchorGravity="bottom|right|end"/>
 
-            <android.support.design.widget.FloatingActionButton
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 style="@style/vv_action_button"
                 android:id="@+id/recordButton"
                 android:src="@drawable/ic_record"
@@ -77,7 +75,7 @@
                 app:layout_anchor="@id/mapView"
                 app:layout_anchorGravity="top|right|end"/>
 
-            <android.support.design.widget.FloatingActionButton
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 style="@style/vv_action_button"
                 android:id="@+id/settingsButton"
                 android:src="@drawable/ic_settings"
@@ -92,15 +90,15 @@
                 app:layout_anchor="@id/mapView"
                 app:layout_anchorGravity="top|left|start" />
 
-        </android.support.design.widget.CoordinatorLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     </LinearLayout>
 
     <fragment
-        android:name="ru.anisart.vv.StyleSettingsFragment"
         android:id="@+id/map_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"/>
+        android:layout_gravity="end"
+        class="ru.anisart.vv.StyleSettingsFragment"/>
 
 </FrameLayout>
